--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -14,4 +14,5 @@
   --color-border: #F3E8E0;        // Warm border
   --font-primary: 'Poppins', sans-serif;
   --border-radius: 0.5rem;
+  --border-radius-sm: 0.25rem;
 }
